projects/bot_eval_run/batch_1770643297744/python-ai-stdlib-oracle_run_01/iterations/10/cmd_python_-m_mini_ai.cli_--help.stderr.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\python-ai-stdlib-oracle_run_01\workspace\mini_ai\cli.py", line 3, in <module>
    from mini_ai.markov import MarkovChain
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\python-ai-stdlib-oracle_run_01\workspace\mini_ai\markov.py", line 24
    context = random.choice([c for c in self.transitions for c])
                                                              ^
SyntaxError: invalid syntax
